APIをJSONレスポンスに変更
